# NLP_CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
nlp_cli/: __init__.py  command_templates.py  entity_extractor.py  executor.py  intent_classifier.py  local_translator.py  main.py  prompts.py  system_info.py  training_data.py
tests/: test_basic.py
